--- a/package.json
+++ b/package.json
@@ -11,9 +11,10 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.9.0",
     "react-scripts": "5.0.1",
+    "react-svg": "^16.1.7",
     "react-tooltip": "^5.10.1",
-    "react-typed": "^1.2.0",
     "sass": "^1.60.0",
+    "typed.js": "^2.0.14",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
