--- a/package.json
+++ b/package.json
@@ -7,7 +7,6 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "react": "^18.2.0",
-    "react-18-image-lightbox": "^5.1.4",
     "react-dom": "^18.2.0",
     "react-modal": "^3.16.1",
     "react-router-dom": "^6.9.0",
@@ -16,7 +15,8 @@
     "react-tooltip": "^5.10.1",
     "sass": "^1.60.0",
     "typed.js": "^2.0.14",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "yet-another-react-lightbox": "^3.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
