--- a/package.json
+++ b/package.json
@@ -6,6 +6,10 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@types/jest": "^29.5.1",
+    "@types/node": "^18.16.0",
+    "@types/react": "^18.2.0",
+    "@types/react-dom": "^18.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-modal": "^3.16.1",
@@ -15,6 +19,7 @@
     "react-tooltip": "^5.10.1",
     "sass": "^1.60.0",
     "typed.js": "^2.0.14",
+    "typescript": "^5.0.4",
     "web-vitals": "^2.1.4",
     "yet-another-react-lightbox": "^3.2.0"
   },
