typing navigation and instaling tailwind css

--- a/package.json
+++ b/package.json
@@ -23,6 +23,9 @@
     "web-vitals": "^2.1.4",
     "yet-another-react-lightbox": "^3.2.0"
   },
+  "overrides": {
+    "typescript": "^5.0.4"
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
@@ -46,5 +49,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "tailwindcss": "^3.3.2"
   }
 }
